Orchidea: Fix expo-workspaces-name-entry being too wide (#807)
* Fixes #802

--- a/Orchidea/files/Orchidea/cinnamon/cinnamon.css
+++ b/Orchidea/files/Orchidea/cinnamon/cinnamon.css
@@ -1953,7 +1953,6 @@ StScrollBar StButton#vhandle:active {
   selected-color: #fff;
   caret-color: rgba(255, 255, 255, 0.85);
   caret-size: 1px;
-  width: 250px;
   height: 24px;
   text-align: center;
 }
